--- a/index.html
+++ b/index.html
@@ -8,26 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="banner-section">
+    <section class="banner">
         <div class="players">
-            <div>
-                <h1>
-
-                </h1>
-                <p>
-
-                </p>
-                <button>
-
-                </button>
-            </div>
-            <div class="palyer">
-                <img src="assets/Banner Image.png">
-            </div>
-
-            
+            <h1>
+                The Greatest show on the earth
+            </h1>
+            <p>
+                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+            </p>
+            <button type="button">watch live</button>
         </div>
+        <div class="player">
+            <img src="assets/Banner Image.png" alt="football player">
+        </div>
+
     </section>
-    
 </body>
 </html>
