--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
             <p>
                 Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
             </p>
-            <button type="button">watch live</button>
+            <button class="b1" type="button">watch live</button>
         </div>
         <div class="player">
             <img src="assets/Banner Image.png" alt="football player">
         </div>
 
     </section>
+
 </body>
 </html>
