--- a/index.html
+++ b/index.html
@@ -23,6 +23,96 @@
         </div>
 
     </section>
+    <section>
+        <div class="menu">
+            <h3>upcoming match</h3>
+            <h3>All groups</h3>
+            <h3>Blogs</h3>
+        </div>
+        <div class="blogs">
+            <div class="blog"> 
+                <img src="assets/Blog Image.png" alt="football image">
+                <button>Transfer</button>
+                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                <p><i class="fa-regular fa-clock"></i>10h</p>
+                <p><i class="fa-regular fa-comment-dots"></i>23</p>
 
+            </div>
+            <div class="blog"> 
+                <img src="assets/Blog Image.png" alt="football image">
+                <button>Transfer</button>
+                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                <p><i class="fa-regular fa-clock"></i>10h</p>
+                <p><i class="fa-regular fa-comment-dots"></i>23</p>
+
+            </div>
+            <div class="blog"> 
+                <img src="assets/Blog Image.png" alt="football image">
+                <button>Transfer</button>
+                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                <p><i class="fa-regular fa-clock"></i>10h</p>
+                <p><i class="fa-regular fa-comment-dots"></i>23</p>
+
+            </div>
+            <div class="blog"> 
+                <img src="assets/Blog Image.png" alt="football image">
+                <button>Transfer</button>
+                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                <p><i class="fa-regular fa-clock"></i>10h</p>
+                <p><i class="fa-regular fa-comment-dots"></i>23</p>
+
+            </div>
+            <div class="blog"> 
+                <img src="assets/Blog Image.png" alt="football image">
+                <button>Transfer</button>
+                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                <p><i class="fa-regular fa-clock"></i>10h</p>
+                <p><i class="fa-regular fa-comment-dots"></i>23</p>
+
+            </div>
+            <div class="blog"> 
+                <img src="assets/Blog Image.png" alt="football image">
+                <button>Transfer</button>
+                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                <p><i class="fa-regular fa-clock"></i>10h</p>
+                <p><i class="fa-regular fa-comment-dots"></i>23</p>
+
+            </div>
+            <div class="blog"> 
+                <img src="assets/Blog Image.png" alt="football image">
+                <button>Transfer</button>
+                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                <p><i class="fa-regular fa-clock"></i>10h</p>
+                <p><i class="fa-regular fa-comment-dots"></i>23</p>
+
+            </div>
+            <div class="blog"> 
+                <img src="assets/Blog Image.png" alt="football image">
+                <button>Transfer</button>
+                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                <p><i class="fa-regular fa-clock"></i>10h</p>
+                <p><i class="fa-regular fa-comment-dots"></i>23</p>
+
+            </div>
+            <div class="blog"> 
+                <img src="assets/Blog Image.png" alt="football image">
+                <button>Transfer</button>
+                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                <p><i class="fa-regular fa-clock"></i>10h</p>
+                <p><i class="fa-regular fa-comment-dots"></i>23</p>
+
+            </div>
+            <div class="blog"> 
+                <img src="assets/Blog Image.png" alt="football image">
+                <button>Transfer</button>
+                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                <p><i class="fa-regular fa-clock"></i>10h</p>
+                <p><i class="fa-regular fa-comment-dots"></i>23</p>
+
+            </div>
+          
+
+        </div>
+    </section>
 </body>
 </html>
